--- a/wodepeizhi.conf
+++ b/wodepeizhi.conf
@@ -97,6 +97,9 @@ https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.re
 [server_local]
 #本地节点
 
+#解锁网易云音乐节点
+http=106.52.127.72:19951, fast-open=false, udp-relay=false, tag= 解锁节点一
+
 [filter_local]
 host-suffix, local, direct
 ip-cidr, 192.168.0.0/16, direct
