--- a/wodepeizhi.conf
+++ b/wodepeizhi.conf
@@ -25,16 +25,17 @@ server=119.29.29.29
 server=114.114.114.114
 
 [policy]
-static= 节点选择, ♻️ 自动选择, 🇭🇰 香港, 日本,🇸🇬 新加坡,美国, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/图标集/可用.png 
- #默认设置10分钟测速一次，当前使用节点延迟和最新测速延迟最低延迟100ms以上则切换为最新的最低延迟，否则继续延迟用节点 
- url-latency-benchmark=♻️ 自动选择，server-tag-regex=.*，check-interval=600，tolerance=100，img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet /自动.png 
- url-latency-benchmark=🇭🇰 香港, server-tag-regex=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台湾|美国|韩国|狮城)))*$，check-interval=600，tolerance=50，img-url=https://raw。 githubusercontent.com/Koolson/Qure/master/IconSet/Hong_Kong.png 
- url-latency-benchmark=台湾, server-tag-regex=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)) .)*$，检查间隔=600，容差=50，img-url=https://raw.githubusercontent.com/Orz-3/face/master/TW.png 
- url-latency-benchmark= 日本, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台湾|美国|韩国|狮城)))*$，check-interval=600，tolerance=100，img-url=https://raw。 githubusercontent.com/Koolson/Qure/master/IconSet/Japan.png 
- url-latency-benchmark=🇸🇬 新加坡, server-tag-regex=(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|)韩国|南朝鲜|US|JP|KR|HK|TW|台湾|美国|韩国))))*$，check-interval=600，tolerance=100，img-url=https://raw.githubusercontent.com /Koolson/Qure/master/IconSet/Singapore.png 
- url-latency-benchmark=美国, server-tag-regex=(?=.*(美国|美国|US|洛杉矶|西雅图|(?i)State|American))^((?!(香港|台湾) |日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台湾|韩国|狮城)).)*$, check-interval=600, tolerance=100, img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/United_States.png 
- static=🙈 网易云音乐, 饮料节点一,  节点选择, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music.png 
- static=漏网之鱼、节点选择、♻️自动选择、🇭🇰香港、台湾、日本、🇸🇬新加坡、美国、PROXY、DIRECT、raw img-url=https:// .com/Koolson/Qure/master/IconSet/Final.png 
+static=🚀 节点选择, ♻️ 自动选择, 🇭🇰 香港,🇯🇵 日本,🇸🇬 新加坡,🇺🇸 美国, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Available.png
+# 默认设置10分钟测速一次，当前使用节点延迟和最新测速延迟最低的节点相差100ms以上则切换为最新的最低延迟节点，否则继续延用节点
+url-latency-benchmark=♻️ 自动选择，server-tag-regex=.*，check-interval=600，tolerance=100，img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet /自动.png
+url-latency-benchmark=🇭🇰 香港, server-tag-regex=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台湾|美国|韩国|狮城)).)*$, check-interval=600, tolerance=50, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Hong_Kong.png
+url-latency-benchmark=🇨🇳 台湾, server-tag-regex=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$, check-interval=600, tolerance=50, img-url=https://raw.githubusercontent.com/Orz-3/face/master/TW.png
+url-latency-benchmark=🇯🇵 日本, server-tag-regex=(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台湾|美国|韩国|狮城)).)*$, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Japan.png
+url-latency-benchmark=🇸🇬 新加坡, server-tag-regex=(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台湾|美国|韩国)).)*$, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Singapore.png
+url-latency-benchmark=🇺🇸 美国, server-tag-regex=(?=.*(美国|美国|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台湾|韩国|狮城)).)*$, check-interval=600, tolerance=100, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/United_States.png
+static=🙈 网易云音乐, 解锁节点一, 🚀 节点选择, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music.png
+static=🐟 漏网之鱼, 🚀 节点选择, ♻️ 自动选择, 🇭🇰 香港,🇨🇳 台湾,🇯🇵 日本,🇸🇬 新加坡,🇺🇸 美国, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
+
 [server_remote]
 #远程订阅
 
