--- a/wodepeizhi.conf
+++ b/wodepeizhi.conf
@@ -232,9 +232,9 @@ final, 黑白名单
 
 
 # TikTok 默认日本（去掉下方#号）
-#(?<=_region=)CN(?=&) url 307 JP
-#(?<=&mcc_mnc=)4 url 307 2 
-#^(https?:\/\/(dm|tnc)[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302  $1$3
+(?<=_region=)CN(?=&) url 307 JP
+(?<=&mcc_mnc=)4 url 307 2 
+^(https?:\/\/(dm|tnc)[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302  $1$3
 
 
 #微信屏蔽链接跳转
